--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@
 }
 
 @media (max-width:768px) {
-.centered-top-page-element { text-align: center;
-}
+  .centered-top-page-element {
+    text-align: center;
+  }
 }
 
 .centered-main-page-element {
@@ -112,7 +113,6 @@
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
