--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   width: 100%;
 }
 
-.header .more-inf {
+.header .header-inf {
   font-family: fantasy, cursive;
 }
 
@@ -32,33 +32,36 @@
   margin: 0 auto 0;
 }
 
-.task {
+.new-task__input,
+.tasks__list__item__label,
+.tasks__list__item__input_text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.new-task__task-row {
   display: flex;
 }
 
-.incompleted-tasks,
-.completed-tasks {
+.tasks__list {
   margin: 0;
   padding: 0px;
 }
 
-.list-item,
-.list-title {
+.tasks__list__item {
   list-style: none;
 }
 
-.task-input,
-.task-btn {
+.new-task__input,
+.new-task__btn,
+.tasks__list__item__input,
+.tasks__list__item__btn {
   outline: none;
 }
 
-.task-btn {
+.new-task__btn,
+.tasks__list__item__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -68,13 +71,14 @@
   cursor: pointer;
 }
 
-.task-btn:hover {
+.new-task__btn:hover,
+.tasks__list__item__btn:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-.list-title,
-.new-task-label {
+.tasks__title,
+.new-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -84,7 +88,8 @@
   text-transform: uppercase;
 }
 
-.task-text-input {
+.new-task__input,
+.tasks__list__item__input_text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -97,22 +102,22 @@
   color: #888;
 }
 
-.task-text-input:focus {
+.tasks__list__item__input_text:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task-label {
+.new-task__label {
   display: block;
   margin: 0 0 20px;
 }
 
-#new-task {
+.new-task__input {
   width: 318px;
 }
 
 /* Task list */
-.list-item {
+.tasks__list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -121,51 +126,53 @@
   align-items: center;
 }
 
-.list-item > * {
+.tasks__list__item > .tasks__list__item__input,
+.tasks__list__item > .tasks__list__item__label,
+.tasks__list__item > .tasks__list__item__btn {
   vertical-align: middle;
 }
 
-.list-item > .task-check-input {
+.tasks__list__item__input_checkbox {
   margin: 0 10px;
 }
 
-.list-item > .task-label {
+.tasks__list__item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.task-text-input {
+.tasks__list__item__input_text {
   width: 226px;
 }
 
-.btn-img {
+.tasks__list__item__btn__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.btn-img:hover {
+.tasks__list__item__btn__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .task-label {
+.tasks__list_completed .tasks__list__item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.task-text-input {
+.tasks__list__item__input_text {
   display: none;
 }
 
-.edit-mode .task-text-input {
+.edit-mode .tasks__list__item__input_text {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .task-label {
+.edit-mode .tasks__list__item__label {
   display: none;
 }
